--- a/board-front/package.json
+++ b/board-front/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
